vlib/v/checker/tests/generics_struct_field_type_err.vv
struct LL<T> {
	mut:
		value T
		next &LL = unsafe { 0 }
}

fn main() {
	mut l := LL<int>{}
	l.value = 5
	println(l.value)
}
